fixtures/fennel/negative/syntax-error.fnl
(local broken [1 2)
